--- a/index.html.html
+++ b/index.html.html
@@ -32,7 +32,7 @@
       auth: {
         clientId: "f7a30705-5baa-43ab-8f5e-db6c98e6ebcb",
         authority: "https://login.microsoftonline.com/agropaisas.onmicrosoft.com",
-        redirectUri: "http://localhost"
+        redirectUri: "https://visor-tv.vercel.app"
       }
     };
 
@@ -127,4 +127,5 @@
     init();
   </script>
 </body>
+
 </html>
