--- a/index.html.html
+++ b/index.html.html
@@ -54,17 +54,23 @@
       }
     }
 
-    async function fetchDriveItems(token) {
-      const siteId = "agropaisas.sharepoint.com,0527bf98-e7a7-47c0-9898-e8ca7c2e8af1,12050814-194d-49d7-96b5-cc2db039a498";
-      const driveId = "b!mL8nBafnwEeYmOjKfC6K8RQIBRJNGddJlrXMLbA5pJhoR4cvnojASLgEwedeeXXN";
+    const almacenFiltro = "Almacen 3"; // Aquí defines el almacén deseado
 
-      const endpoint = `https://graph.microsoft.com/v1.0/sites/${siteId}/drives/${driveId}/root/children`;
-      const res = await fetch(endpoint, {
-        headers: { Authorization: `Bearer ${token}` }
-      });
-      const data = await res.json();
-      return data.value.filter(item => item['@microsoft.graph.downloadUrl']);
-    }
+async function fetchDriveItems(token) {
+  const endpoint = `https://graph.microsoft.com/v1.0/sites/${siteId}/drives/${driveId}/root/children?$expand=listItem($expand=fields)`;
+
+  const res = await fetch(endpoint, {
+    headers: { Authorization: `Bearer ${token}` }
+  });
+
+  const data = await res.json();
+
+  return data.value.filter(item => {
+    const fields = item.listItem?.fields;
+    return fields?.Almacen === almacenFiltro && item['@microsoft.graph.downloadUrl'];
+  });
+}
+
 
     function startSlideshow(items) {
       const viewer = document.getElementById("viewer");
@@ -129,4 +135,5 @@
 </body>
 
 </html>
+
 
