--- a/index.html.html
+++ b/index.html.html
@@ -42,6 +42,12 @@
       scopes: ["Files.Read.All", "Sites.Read.All"]
     };
 
+    const urlParams = new URLSearchParams(window.location.search);
+    const almacenFiltro = urlParams.get("almacen") || "Almacen 3";
+
+    const siteId = "agropaisas.sharepoint.com,0527bf98-e7a7-47c0-9898-e8ca7c2e8af1,12050814-194d-49d7-96b5-cc2db039a498";
+    const driveId = "b!mL8nBafnwEeYmOjKfC6K8RQIBRJNGddJlrXMLbA5pJhoR4cvnojASLgEwedeeXXN";
+
     let tokenGlobal = null;
     let slideshowTimer = null;
 
@@ -54,26 +60,20 @@
       }
     }
 
-const almacenFiltro = "Almacen 3"; // Aquí defines el almacén deseado
-const siteId = "agropaisas.sharepoint.com,0527bf98-e7a7-47c0-9898-e8ca7c2e8af1,12050814-194d-49d7-96b5-cc2db039a498";
-const driveId = "b!mL8nBafnwEeYmOjKfC6K8RQIBRJNGddJlrXMLbA5pJhoR4cvnojASLgEwedeeXXN";
+    async function fetchDriveItems(token) {
+      const endpoint = `https://graph.microsoft.com/v1.0/sites/${siteId}/drives/${driveId}/root/children?$expand=listItem&select=name,@microsoft.graph.downloadUrl,listItem`;
 
+      const res = await fetch(endpoint, {
+        headers: { Authorization: `Bearer ${token}` }
+      });
 
-async function fetchDriveItems(token) {
-  const endpoint = `https://graph.microsoft.com/v1.0/sites/${siteId}/drives/${driveId}/root/children?$expand=listItem&select=name,@microsoft.graph.downloadUrl,listItem`;
+      const data = await res.json();
 
-  const res = await fetch(endpoint, {
-    headers: { Authorization: `Bearer ${token}` }
-  });
-
-  const data = await res.json();
-
-  return data.value.filter(item => {
-    const fields = item.listItem?.fields;
-    return fields?.Almacen === almacenFiltro && item['@microsoft.graph.downloadUrl'];
-  });
-}
-
+      return data.value.filter(item => {
+        const fields = item.listItem?.fields;
+        return fields?.Almacen === almacenFiltro && item['@microsoft.graph.downloadUrl'];
+      });
+    }
 
     function startSlideshow(items) {
       const viewer = document.getElementById("viewer");
@@ -136,9 +136,7 @@ async function fetchDriveItems(token) {
     init();
   </script>
 </body>
-
 </html>
-
 
 
 
