--- a/index.html.html
+++ b/index.html.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Reproductor de Campañas</title>
   <script src="https://alcdn.msauth.net/browser/2.37.0/js/msal-browser.min.js"></script>
   <style>
@@ -28,6 +28,8 @@
   <div id="viewer"></div>
 
   <script>
+    const almacenFiltro = "Almacen 3"; // Cambia aquí según el almacén
+
     const msalConfig = {
       auth: {
         clientId: "f7a30705-5baa-43ab-8f5e-db6c98e6ebcb",
@@ -37,11 +39,11 @@
     };
 
     const msalInstance = new msal.PublicClientApplication(msalConfig);
+
     const loginRequest = {
       scopes: ["Files.Read.All", "Sites.Read.All"]
     };
 
-    const almacenFiltro = "Almacen 3"; // Aquí defines el almacén deseado
     const siteId = "agropaisas.sharepoint.com,0527bf98-e7a7-47c0-9898-e8ca7c2e8af1,12050814-194d-49d7-96b5-cc2db039a498";
     const driveId = "b!mL8nBafnwEeYmOjKfC6K8RQIBRJNGddJlrXMLbA5pJhoR4cvnojASLgEwedeeXXN";
 
@@ -54,35 +56,47 @@
         return response.accessToken;
       } catch (error) {
         console.error("Login error:", error);
+        alert("Error de autenticación.");
       }
     }
 
     async function fetchDriveItems(token) {
-      const endpoint = `https://graph.microsoft.com/v1.0/sites/${siteId}/drives/${driveId}/root/children?$expand=listItem&select=name,@microsoft.graph.downloadUrl,listItem`;
+      const endpoint = `https://graph.microsoft.com/v1.0/sites/${siteId}/drives/${driveId}/root/children`;
+      const res = await fetch(endpoint, {
+        headers: { Authorization: `Bearer ${token}` }
+      });
 
+      const text = await res.text();
+      let data;
       try {
-        const res = await fetch(endpoint, {
-          headers: { Authorization: `Bearer ${token}` }
-        });
-
-        const text = await res.text();
-        try {
-          const data = JSON.parse(text);
-          return data.value.filter(item => {
-            const fields = item.listItem?.fields;
-            return fields?.Almacen === almacenFiltro && item['@microsoft.graph.downloadUrl'];
-          });
-        } catch (parseError) {
-          console.error("Error al parsear JSON:", parseError);
-          console.log("Respuesta recibida:", text);
-          alert("Error al procesar la respuesta del servidor.");
-          return [];
-        }
-      } catch (networkError) {
-        console.error("Error al obtener archivos:", networkError);
-        alert("No se pudo obtener la lista de archivos.");
+        data = JSON.parse(text);
+      } catch (e) {
+        console.error("Error al parsear JSON:", e);
+        alert("Error al procesar la respuesta del servidor.");
         return [];
       }
+
+      const archivos = data.value;
+      const filtrados = [];
+
+      for (const item of archivos) {
+        if (!item['@microsoft.graph.downloadUrl']) continue;
+
+        try {
+          const fieldsRes = await fetch(`https://graph.microsoft.com/v1.0/sites/${siteId}/drives/${driveId}/items/${item.id}/listItem/fields`, {
+            headers: { Authorization: `Bearer ${token}` }
+          });
+          const fields = await fieldsRes.json();
+
+          if (fields?.Almacen === almacenFiltro) {
+            filtrados.push(item);
+          }
+        } catch (error) {
+          console.warn("No se pudieron obtener los metadatos de:", item.name, error);
+        }
+      }
+
+      return filtrados;
     }
 
     function startSlideshow(items) {
@@ -135,7 +149,7 @@
 
       const items = await fetchDriveItems(tokenGlobal);
       if (items.length === 0) {
-        alert("No se encontraron archivos.");
+        alert("No se encontraron archivos para este almacén.");
         return;
       }
 
@@ -146,6 +160,7 @@
   </script>
 </body>
 </html>
+
 
 
 
