--- a/index.html.html
+++ b/index.html.html
@@ -44,7 +44,9 @@
 
     const siteId = "agropaisas.sharepoint.com,0527bf98-e7a7-47c0-9898-e8ca7c2e8af1,12050814-194d-49d7-96b5-cc2db039a498";
     const driveId = "b!mL8nBafnwEeYmOjKfC6K8RQIBRJNGddJlrXMLbA5pJhoR4cvnojASLgEwedeeXXN";
-    const almacenFiltro = "Almacen 3";
+    const params = new URLSearchParams(window.location.search);
+    const almacenFiltro = params.get("almacen");
+
 
     let tokenGlobal = null;
     let slideshowTimer = null;
@@ -148,6 +150,7 @@
   </script>
 </body>
 </html>
+
 
 
 
