--- a/index.html.html
+++ b/index.html.html
@@ -45,7 +45,7 @@
     const siteId = "agropaisas.sharepoint.com,0527bf98-e7a7-47c0-9898-e8ca7c2e8af1,12050814-194d-49d7-96b5-cc2db039a498";
     const driveId = "b!mL8nBafnwEeYmOjKfC6K8RQIBRJNGddJlrXMLbA5pJhoR4cvnojASLgEwedeeXXN";
     const params = new URLSearchParams(window.location.search);
-    const almacenFiltro = params.get("almacen");
+    const almacenFiltro = params.get("Almacen");
 
 
     let tokenGlobal = null;
@@ -150,6 +150,7 @@
   </script>
 </body>
 </html>
+
 
 
 
