--- a/index.html.html
+++ b/index.html.html
@@ -37,7 +37,11 @@
     };
 
     const msalInstance = new msal.PublicClientApplication(msalConfig);
-    const loginRequest = { scopes: ["Files.Read.All", "Sites.Read.All"] };
+
+    const loginRequest = {
+      scopes: ["Files.Read.All", "Sites.Read.All"]
+    };
+
     const siteId = "agropaisas.sharepoint.com,0527bf98-e7a7-47c0-9898-e8ca7c2e8af1,12050814-194d-49d7-96b5-cc2db039a498";
     const driveId = "b!mL8nBafnwEeYmOjKfC6K8RQIBRJNGddJlrXMLbA5pJhoR4cvnojASLgEwedeeXXN";
 
@@ -58,7 +62,7 @@
     }
 
     async function fetchDriveItems(token) {
-      const endpoint = `https://graph.microsoft.com/v1.0/sites/${siteId}/drives/${driveId}/root/children?$expand=listItem($expand=fields)&select=name,@microsoft.graph.downloadUrl,listItem`;
+      const endpoint = `https://graph.microsoft.com/v1.0/sites/${siteId}/drives/${driveId}/root/children?$expand=listItem($expand=fields)&$select=name,@microsoft.graph.downloadUrl`;
 
       const res = await fetch(endpoint, {
         headers: { Authorization: `Bearer ${token}` }
@@ -79,7 +83,8 @@
 
       return data.value.filter(item => {
         const fields = item.listItem?.fields;
-        return fields?.Almacen === almacenFiltro && item['@microsoft.graph.downloadUrl'];
+        const almacenItem = fields?.Almacen?.trim();
+        return almacenItem === almacenFiltro && item['@microsoft.graph.downloadUrl'];
       });
     }
 
@@ -90,6 +95,7 @@
 
       function showNext() {
         if (items.length === 0) return;
+
         viewer.innerHTML = "";
         const item = items[index];
         const url = item['@microsoft.graph.downloadUrl'];
@@ -116,6 +122,8 @@
       }
 
       showNext();
+
+      // Refrescar cada 10 minutos
       if (slideshowTimer) clearTimeout(slideshowTimer);
       slideshowTimer = setTimeout(refreshSlideshow, 10 * 60 * 1000);
     }
@@ -142,11 +150,3 @@
   </script>
 </body>
 </html>
-
-
-
-
-
-
-
-
