--- a/index.html.html
+++ b/index.html.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Reproductor de Campañas</title>
   <script src="https://alcdn.msauth.net/browser/2.37.0/js/msal-browser.min.js"></script>
+  <link rel="icon" href="data:,">
   <style>
     html, body {
       margin: 0;
@@ -37,12 +38,8 @@
     };
 
     const msalInstance = new msal.PublicClientApplication(msalConfig);
-
-    const loginRequest = {
-      scopes: ["Files.Read.All", "Sites.Read.All"]
-    };
-
-    const almacenFiltro = "Almacen 3"; // Filtro fijo
+    const loginRequest = { scopes: ["Files.Read.All", "Sites.Read.All"] };
+    const almacenFiltro = "Almacen 3";
     const siteId = "agropaisas.sharepoint.com,0527bf98-e7a7-47c0-9898-e8ca7c2e8af1,12050814-194d-49d7-96b5-cc2db039a498";
     const driveId = "b!mL8nBafnwEeYmOjKfC6K8RQIBRJNGddJlrXMLbA5pJhoR4cvnojASLgEwedeeXXN";
 
@@ -55,20 +52,38 @@
         return response.accessToken;
       } catch (error) {
         console.error("Login error:", error);
+        return null;
       }
     }
 
     async function fetchDriveItems(token) {
       const endpoint = `https://graph.microsoft.com/v1.0/sites/${siteId}/drives/${driveId}/root/children?$expand=listItem&select=name,@microsoft.graph.downloadUrl,listItem`;
+
       const res = await fetch(endpoint, {
         headers: { Authorization: `Bearer ${token}` }
       });
 
-      const data = await res.json();
+      let data;
+      try {
+        data = await res.json();
+      } catch (e) {
+        alert("Error al procesar la respuesta del servidor.");
+        console.error("JSON parse error:", e);
+        return [];
+      }
+
+      if (!data.value || !Array.isArray(data.value)) {
+        alert("No se encontraron archivos válidos.");
+        return [];
+      }
 
       return data.value.filter(item => {
-        const fields = item.listItem?.fields;
-        return fields?.Almacen === almacenFiltro && item['@microsoft.graph.downloadUrl'];
+        try {
+          const fields = item.listItem?.fields;
+          return fields?.Almacen === almacenFiltro && item['@microsoft.graph.downloadUrl'];
+        } catch (e) {
+          return false;
+        }
       });
     }
 
@@ -78,6 +93,8 @@
       let timeout = null;
 
       function showNext() {
+        if (items.length === 0) return;
+
         viewer.innerHTML = "";
         const item = items[index];
         const url = item['@microsoft.graph.downloadUrl'];
@@ -105,7 +122,6 @@
 
       showNext();
 
-      // Refrescar cada 10 minutos
       if (slideshowTimer) clearTimeout(slideshowTimer);
       slideshowTimer = setTimeout(refreshSlideshow, 10 * 60 * 1000);
     }
@@ -123,7 +139,7 @@
 
       const items = await fetchDriveItems(tokenGlobal);
       if (items.length === 0) {
-        alert("No se encontraron archivos.");
+        alert("No se encontraron archivos con el filtro aplicado.");
         return;
       }
 
@@ -134,5 +150,3 @@
   </script>
 </body>
 </html>
-
-
