--- a/index.html.html
+++ b/index.html.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Reproductor de Campañas</title>
   <script src="https://alcdn.msauth.net/browser/2.37.0/js/msal-browser.min.js"></script>
   <style>
@@ -60,7 +60,7 @@
     }
 
     async function fetchDriveItems(token) {
-      const endpoint = `https://graph.microsoft.com/v1.0/sites/${siteId}/drives/${driveId}/root/children?$expand=listItem&select=name,@microsoft.graph.downloadUrl`;
+      const endpoint = `https://graph.microsoft.com/v1.0/sites/${siteId}/drives/${driveId}/root/children?$expand=listItem`;
 
       const res = await fetch(endpoint, {
         headers: { Authorization: `Bearer ${token}` }
@@ -80,7 +80,6 @@
         return [];
       }
 
-      // Filtrar por metadato "Almacen"
       return data.value.filter(item => {
         const fields = item.listItem?.fields;
         return fields?.Almacen === almacenFiltro && item['@microsoft.graph.downloadUrl'];
@@ -139,7 +138,7 @@
 
       const items = await fetchDriveItems(tokenGlobal);
       if (items.length === 0) {
-        alert("No se encontraron archivos para el almacén seleccionado.");
+        alert("No se encontraron archivos con el filtro aplicado.");
         return;
       }
 
@@ -150,3 +149,4 @@
   </script>
 </body>
 </html>
+
