--- a/reproductor.html
+++ b/reproductor.html
@@ -32,7 +32,7 @@
       auth: {
         clientId: "f7a30705-5baa-43ab-8f5e-db6c98e6ebcb",
         authority: "https://login.microsoftonline.com/agropaisas.onmicrosoft.com",
-        redirectUri: "http://localhost"
+        redirectUri: "https://agro-player.vercel.app/"
       }
     };
 
@@ -41,6 +41,10 @@
     const loginRequest = {
       scopes: ["Files.Read.All", "Sites.Read.All"]
     };
+
+    const almacenFiltro = "Almacen 3";
+    const siteId = "agropaisas.sharepoint.com,0527bf98-e7a7-47c0-9898-e8ca7c2e8af1,12050814-194d-49d7-96b5-cc2db039a498";
+    const driveId = "b!mL8nBafnwEeYmOjKfC6K8RQIBRJNGddJlrXMLbA5pJhoR4cvnojASLgEwedeeXXN";
 
     let tokenGlobal = null;
     let slideshowTimer = null;
@@ -51,19 +55,35 @@
         return response.accessToken;
       } catch (error) {
         console.error("Login error:", error);
+        return null;
       }
     }
 
     async function fetchDriveItems(token) {
-      const siteId = "agropaisas.sharepoint.com,0527bf98-e7a7-47c0-9898-e8ca7c2e8af1,12050814-194d-49d7-96b5-cc2db039a498";
-      const driveId = "b!mL8nBafnwEeYmOjKfC6K8RQIBRJNGddJlrXMLbA5pJhoR4cvnojASLgEwedeeXXN";
+      const endpoint = `https://graph.microsoft.com/v1.0/sites/${siteId}/drives/${driveId}/root/children?$expand=listItem`;
 
-      const endpoint = `https://graph.microsoft.com/v1.0/sites/${siteId}/drives/${driveId}/root/children`;
       const res = await fetch(endpoint, {
         headers: { Authorization: `Bearer ${token}` }
       });
-      const data = await res.json();
-      return data.value.filter(item => item['@microsoft.graph.downloadUrl']);
+
+      let data;
+      try {
+        data = await res.json();
+      } catch (e) {
+        alert("Error al procesar los datos de SharePoint.");
+        console.error("Error JSON:", e);
+        return [];
+      }
+
+      if (!data.value || !Array.isArray(data.value)) {
+        console.warn("Respuesta sin valor válido:", data);
+        return [];
+      }
+
+      return data.value.filter(item => {
+        const fields = item.listItem?.fields;
+        return fields?.Almacen === almacenFiltro && item['@microsoft.graph.downloadUrl'];
+      });
     }
 
     function startSlideshow(items) {
@@ -72,6 +92,8 @@
       let timeout = null;
 
       function showNext() {
+        if (items.length === 0) return;
+
         viewer.innerHTML = "";
         const item = items[index];
         const url = item['@microsoft.graph.downloadUrl'];
@@ -99,7 +121,6 @@
 
       showNext();
 
-      // Refrescar cada 10 minutos
       if (slideshowTimer) clearTimeout(slideshowTimer);
       slideshowTimer = setTimeout(refreshSlideshow, 10 * 60 * 1000);
     }
@@ -117,7 +138,7 @@
 
       const items = await fetchDriveItems(tokenGlobal);
       if (items.length === 0) {
-        alert("No se encontraron archivos.");
+        alert("No se encontraron archivos con el filtro aplicado.");
         return;
       }
 
@@ -128,3 +149,5 @@
   </script>
 </body>
 </html>
+
+
