--- a/reproductor.html
+++ b/reproductor.html
@@ -32,7 +32,7 @@
       auth: {
         clientId: "f7a30705-5baa-43ab-8f5e-db6c98e6ebcb",
         authority: "https://login.microsoftonline.com/agropaisas.onmicrosoft.com",
-        redirectUri: "https://agro-player.vercel.app/"
+        redirectUri: "https://agro-player.vercel.app/reproductor.html"
       }
     };
 
@@ -42,7 +42,9 @@
       scopes: ["Files.Read.All", "Sites.Read.All"]
     };
 
-    const almacenFiltro = "Almacen 3";
+    // 👇 Obtenemos el parámetro "almacen" de la URL
+    const almacenFiltro = new URLSearchParams(window.location.search).get("almacen");
+
     const siteId = "agropaisas.sharepoint.com,0527bf98-e7a7-47c0-9898-e8ca7c2e8af1,12050814-194d-49d7-96b5-cc2db039a498";
     const driveId = "b!mL8nBafnwEeYmOjKfC6K8RQIBRJNGddJlrXMLbA5pJhoR4cvnojASLgEwedeeXXN";
 
@@ -149,5 +151,6 @@
   </script>
 </body>
 </html>
+
 
 
