--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
   <h1>Selecciona un Almacén</h1>
   <div class="menu">
-    <a href="reproductor.html?almacen=Almacen 1" class="almacen-btn">Almacén 1</a>
+    <a href="reproductor.html?almacen=AGUACHICA" class="almacen-btn">Almacén 1</a>
     <a href="reproductor.html?almacen=Almacen 2" class="almacen-btn">Almacén 2</a>
     <a href="reproductor.html?almacen=Almacen 3" class="almacen-btn">Almacén 3</a>
     <a href="reproductor.html?almacen=Almacen 4" class="almacen-btn">Almacén 4</a>
@@ -56,5 +56,6 @@
   </div>
 </body>
 </html>
+
 
 
